--- a/docs/models/location.yml
+++ b/docs/models/location.yml
@@ -284,6 +284,10 @@ properties:
     description: 'The summary of the location. Allows HTML.'
     type: string
     nullable: true
+  phone:
+    description: 'The phone of the location.'
+    type: string
+    nullable: true
   address:
     description: 'JSON: address'
     type: object
